--- a/config/zones/RU-KGD.yaml
+++ b/config/zones/RU-KGD.yaml
@@ -1,9 +1,27 @@
 bounding_box:
-  - - 19.10954837300008
-    - 53.842937318000054
-  - - 23.348351684000107
-    - 55.78995961500016
+- - 19.10954837300008
+  - 53.842937318000054
+- - 23.348351684000107
+  - 55.78995961500016
 country: RU
+country_name: Russia
+emissionFactors:
+  direct:
+    unknown:
+      _comment: 'Assumes weighted average emission factor based on 2015-TWh production:
+        22.7% * 820 g/kWh (coal) + 1.4% * 650 g/kWh (oil) + 75.8% * 490 g/kWh (gas)  =
+        567 g/kWh; 2015 production'
+      _url: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
+      source: IEA 2015; assumes 76% gas, 23% coal, 1% oil
+      value: 460.06
+  lifecycle:
+    unknown:
+      _comment: 'Assumes weighted average emission factor based on 2015-TWh production:
+        22.7% * 820 g/kWh (coal) + 1.4% * 650 g/kWh (oil) + 75.8% * 490 g/kWh (gas)  =
+        567 g/kWh; 2015 production'
+      _url: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
+      source: IEA 2015; assumes 76% gas, 23% coal, 1% oil
+      value: 567.5
 fallbackZoneMixes:
   _comment: see http://www.centrumbalticum.org/files/1899/BSR_Policy_Briefing_2_2014.pdf
     and https://newsbase.com/topstories/russia-invest-us156bn-kaliningrad-power-plants.
@@ -20,4 +38,3 @@ fallbackZoneMixes:
 region: Europe
 timezone: Europe/Kaliningrad
 zone_name: Kaliningrad
-country_name: Russia
