--- a/config/zones/KW.yaml
+++ b/config/zones/KW.yaml
@@ -1,168 +1,172 @@
 bounding_box:
-  - - 46.155
-    - 28.3985
-  - - 48.7948
-    - 30.4747
+- - 46.155
+  - 28.3985
+- - 48.7948
+  - 30.4747
 capacity:
   gas:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 10220.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 11100.0
-    - datetime: '2020-01-01'
-      source: Ember, Yearly electricity data
-      value: 11650.0
-    - datetime: '2021-01-01'
-      source: Ember, Yearly electricity data
-      value: 11680.0
-    - datetime: '2024-01-01'
-      source: Ember, Yearly electricity data
-      value: 11720.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 10220.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 11100.0
+  - datetime: '2020-01-01'
+    source: Ember, Yearly electricity data
+    value: 11650.0
+  - datetime: '2021-01-01'
+    source: Ember, Yearly electricity data
+    value: 11680.0
+  - datetime: '2024-01-01'
+    source: Ember, Yearly electricity data
+    value: 11720.0
   oil:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 8500.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 8500.0
   solar:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 20.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 30.0
-    - datetime: '2019-01-01'
-      source: Ember, Yearly electricity data
-      value: 80.0
-    - datetime: '2022-01-01'
-      source: Ember, Yearly electricity data
-      value: 100.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 20.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 30.0
+  - datetime: '2019-01-01'
+    source: Ember, Yearly electricity data
+    value: 80.0
+  - datetime: '2022-01-01'
+    source: Ember, Yearly electricity data
+    value: 100.0
   wind:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 0.0
-    - datetime: '2018-01-01'
-      source: Ember, Yearly electricity data
-      value: 10.0
+  - datetime: '2017-01-01'
+    source: Ember, Yearly electricity data
+    value: 0.0
+  - datetime: '2018-01-01'
+    source: Ember, Yearly electricity data
+    value: 10.0
 contributors:
-  - alixunderplatz
-  - nessie2013
-  - consideRatio
+- alixunderplatz
+- nessie2013
+- consideRatio
 country: KW
+country_name: Kuwait
+currency: KWD
 emissionFactors:
   direct:
     battery discharge:
-      - datetime: '2020-01-01'
-        source: Electricity Maps, 2020 average
-        value: 575.0
-      - datetime: '2021-01-01'
-        source: Electricity Maps, 2021 average
-        value: 575.0
+    - datetime: '2020-01-01'
+      source: Electricity Maps, 2020 average
+      value: 575.0
+    - datetime: '2021-01-01'
+      source: Electricity Maps, 2021 average
+      value: 575.0
     hydro discharge:
-      - datetime: '2020-01-01'
-        source: Electricity Maps, 2020 average
-        value: 575.0
-      - datetime: '2021-01-01'
-        source: Electricity Maps, 2021 average
-        value: 575.0
-  lifecycle:
-    battery discharge:
-      - datetime: '2020-01-01'
-        source: Electricity Maps, 2020 average
-        value: 550.0
-      - datetime: '2021-01-01'
-        source: Electricity Maps, 2021 average
-        value: 550.0
-      - datetime: '2022-01-01'
-        source: Electricity Maps, 2022 average
-        value: 550.0
-      - datetime: '2023-01-01'
-        source: Electricity Maps, 2023 average
-        value: 550.0
-    hydro discharge:
-      - datetime: '2020-01-01'
-        source: Electricity Maps, 2020 average
-        value: 550.0
-      - datetime: '2021-01-01'
-        source: Electricity Maps, 2021 average
-        value: 550.0
-      - datetime: '2022-01-01'
-        source: Electricity Maps, 2022 average
-        value: 550.0
-      - datetime: '2023-01-01'
-        source: Electricity Maps, 2023 average
-        value: 550.0
+    - datetime: '2020-01-01'
+      source: Electricity Maps, 2020 average
+      value: 575.0
+    - datetime: '2021-01-01'
+      source: Electricity Maps, 2021 average
+      value: 575.0
     unknown:
       _url: https://www.iea.org/fuels-and-technologies/electricity
       source: IEA 2019; assumes 62.3% gas, 37.7% oil
-      value: 550
+      value: 383.572
+  lifecycle:
+    battery discharge:
+    - datetime: '2020-01-01'
+      source: Electricity Maps, 2020 average
+      value: 550.0
+    - datetime: '2021-01-01'
+      source: Electricity Maps, 2021 average
+      value: 550.0
+    - datetime: '2022-01-01'
+      source: Electricity Maps, 2022 average
+      value: 550.0
+    - datetime: '2023-01-01'
+      source: Electricity Maps, 2023 average
+      value: 550.0
+    hydro discharge:
+    - datetime: '2020-01-01'
+      source: Electricity Maps, 2020 average
+      value: 550.0
+    - datetime: '2021-01-01'
+      source: Electricity Maps, 2021 average
+      value: 550.0
+    - datetime: '2022-01-01'
+      source: Electricity Maps, 2022 average
+      value: 550.0
+    - datetime: '2023-01-01'
+      source: Electricity Maps, 2023 average
+      value: 550.0
+    unknown:
+      _url: https://www.iea.org/fuels-and-technologies/electricity
+      source: IEA 2019; assumes 62.3% gas, 37.7% oil
+      value: 550.3199999999999
 fallbackZoneMixes:
   powerOriginRatios:
-    - _source: Electricity Maps, 2020 average
-      datetime: '2020-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.0
-        gas: 0.0
-        geothermal: 0.0
-        hydro: 0.0
-        hydro discharge: 0.0
-        nuclear: 0.0
-        oil: 0.0
-        solar: 0.0
-        unknown: 0.9999999963920968
-        wind: 0.0
-    - _source: Electricity Maps, 2021 average
-      datetime: '2021-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.0
-        gas: 0.0
-        geothermal: 0.0
-        hydro: 0.0
-        hydro discharge: 0.0
-        nuclear: 0.0
-        oil: 0.0
-        solar: 0.0
-        unknown: 0.9999999967729631
-        wind: 0.0
-    - _source: Electricity Maps, 2022 average
-      datetime: '2022-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.0
-        gas: 0.0
-        geothermal: 0.0
-        hydro: 0.0
-        hydro discharge: 0.0
-        nuclear: 0.0
-        oil: 0.0
-        solar: 0.0
-        unknown: 0.9999999990496002
-        wind: 0.0
-    - _source: Electricity Maps, 2023 average
-      datetime: '2023-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.0
-        gas: 0.0
-        geothermal: 0.0
-        hydro: 0.0
-        hydro discharge: 0.0
-        nuclear: 0.0
-        oil: 0.0
-        solar: 0.0
-        unknown: 0.9999999920933934
-        wind: 0.0
+  - _source: Electricity Maps, 2020 average
+    datetime: '2020-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.0
+      gas: 0.0
+      geothermal: 0.0
+      hydro: 0.0
+      hydro discharge: 0.0
+      nuclear: 0.0
+      oil: 0.0
+      solar: 0.0
+      unknown: 0.9999999963920968
+      wind: 0.0
+  - _source: Electricity Maps, 2021 average
+    datetime: '2021-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.0
+      gas: 0.0
+      geothermal: 0.0
+      hydro: 0.0
+      hydro discharge: 0.0
+      nuclear: 0.0
+      oil: 0.0
+      solar: 0.0
+      unknown: 0.9999999967729631
+      wind: 0.0
+  - _source: Electricity Maps, 2022 average
+    datetime: '2022-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.0
+      gas: 0.0
+      geothermal: 0.0
+      hydro: 0.0
+      hydro discharge: 0.0
+      nuclear: 0.0
+      oil: 0.0
+      solar: 0.0
+      unknown: 0.9999999990496002
+      wind: 0.0
+  - _source: Electricity Maps, 2023 average
+    datetime: '2023-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.0
+      gas: 0.0
+      geothermal: 0.0
+      hydro: 0.0
+      hydro discharge: 0.0
+      nuclear: 0.0
+      oil: 0.0
+      solar: 0.0
+      unknown: 0.9999999920933934
+      wind: 0.0
 parsers:
   consumption: KW.fetch_consumption
   productionCapacity: EMBER.fetch_production_capacity
 region: Asia
 timezone: Asia/Kuwait
 zone_name: Kuwait
-country_name: Kuwait
-currency: KWD
