--- a/config/zones/PR.yaml
+++ b/config/zones/PR.yaml
@@ -198,6 +198,11 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: eGrid 2023
       value: 755.5503294336717
+    unknown:
+      _comment: 'Source: https://indicadores.pr/dataset/generacion-consumo-costo-ingresos-y-clientes-del-sistema-electrico-de-puerto-rico/resource/fdad4f42-a4be-48bb-9478-a8fb75c000c6'
+      source: assumes 12% hydro, 57% solar, 31% wind based on average renewable generation
+        October 2019-September 2020
+      value: 0.0
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -320,7 +325,7 @@ emissionFactors:
       _comment: 'Source: https://indicadores.pr/dataset/generacion-consumo-costo-ingresos-y-clientes-del-sistema-electrico-de-puerto-rico/resource/fdad4f42-a4be-48bb-9478-a8fb75c000c6'
       source: assumes 12% hydro, 57% solar, 31% wind based on average renewable generation
         October 2019-September 2020
-      value: 31.94
+      value: 31.939999999999998
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
