--- a/config/zones/RU-FE.yaml
+++ b/config/zones/RU-FE.yaml
@@ -1,10 +1,27 @@
 bounding_box:
-  - - 141.5
-    - 43.3
-  - - 179.9
-    - 71.6
+- - 141.5
+  - 43.3
+- - 179.9
+  - 71.6
 country: RU
+country_name: Russia
+emissionFactors:
+  direct:
+    unknown:
+      _comment: 'Assumes weighted average emission factor based on 2015-TWh production:
+        22.7% * 820 g/kWh (coal) + 1.4% * 650 g/kWh (oil) + 75.8% * 490 g/kWh (gas)  =
+        567 g/kWh; 2015 production'
+      _url: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
+      source: IEA 2015; assumes 76% gas, 23% coal, 1% oil
+      value: 460.06
+  lifecycle:
+    unknown:
+      _comment: 'Assumes weighted average emission factor based on 2015-TWh production:
+        22.7% * 820 g/kWh (coal) + 1.4% * 650 g/kWh (oil) + 75.8% * 490 g/kWh (gas)  =
+        567 g/kWh; 2015 production'
+      _url: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
+      source: IEA 2015; assumes 76% gas, 23% coal, 1% oil
+      value: 567.5
 region: Europe
 timezone: Asia/Kamchatka
 zone_name: Far East
-country_name: Russia
